--- a/HTComputing.tex
+++ b/HTComputing.tex
@@ -1,3 +1,4 @@
+%----------------------------------------------------------------------------------------%
 \subsection*{High Throughput Computing (HTC)}
 For many experimental scientists, scientific progress and quality of research are strongly linked to computing throughput. 
 
@@ -10,19 +11,33 @@ Little attention has been devoted by the computing community to environments tha
 amounts of processing capacity over long periods of time. We refer to such environments as High Throughput Computing (HTC) 
 environments.
 
+%----------------------------------------------------------------------------------------%
+\subsection*{FLoating-point Operations Per Second}
+In computing, FLOPS (for FLoating-point Operations Per Second) is a measure of computer performance, useful in fields of scientific calculations that make heavy use of floating-point calculations. For such cases it is a more accurate measure than the generic instructions per second.
+ 
+Since the final S stands for "second", conservative speakers consider "FLOPS" as both the singular and plural of the term, although the singular "FLOP" is frequently encountered. Alternatively, the singular FLOP (or flop) is used as an abbreviation for "FLoating-point OPeration", and a flop count is a count of these operations (e.g., required by a given algorithm or computer program). In this context, "flops" is simply the plural rather than a rate, which would then be "flop/s". 
+
+%----------------------------------------------------------------------------------------%
 \subsection{Key Definitions}
-For more than a decade, the HTCondor team at the Computer Sciences Department at the University of Wisconsin-Madison has been 
+
+\begin{itemize}
+\item For more than a decade, the HTCondor team at the Computer Sciences Department at the University of Wisconsin-Madison has been 
 developing and evaluating mechanisms and policies that support HTC on large collections of distributively owned heterogeneous 
-computing resources. We first introduced the distinction between High Performance Computing (HPC) and High Throughput Computing 
+computing resources. 
+
+\item We first introduced the distinction between High Performance Computing (HPC) and High Throughput Computing 
 (HTC) in a seminar at the NASA Goddard Flight Center i in July of 1996 and a month later at the European Laboratory for 
 Particle Physics (CERN). In June of 1997 HPCWire published an interview on High Throughput Computing.
 
+\item
 The key to HTC is effective management and exploitation of all available computing resources. 
 
+\item
 Since the computing needs of most scientists can be satisfied these days by commodity CPUs and memory, high efficiency is 
 not playing a major role in a HTC environment. The main challenge a typical HTC environment faces is how to maximize the 
 amount of resources accessible to its customers. 
 
+\item
 Distributed ownership of computing resources is the major obstacle such 
 an environment has to overcome in order to expand the pool of resources it can draw from. 
 
@@ -31,3 +46,6 @@ computing resources in the hands of individuals and small groups.
 
 These distributed owners will be willing to include their resources in a HTC
 environment only after they are convinced that their needs will be addressed and their rights protected.
+\end{itemize}
+%----------------------------------------------------------------------------------------%
+\end{document}
